--- a/Athena/Athena.csproj
+++ b/Athena/Athena.csproj
@@ -46,26 +46,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cadastrarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="cadastrarCliente.Designer.cs">
+      <DependentUpon>cadastrarCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="cadastroFuncionarios.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="cadastroFuncionarios.Designer.cs">
       <DependentUpon>cadastroFuncionarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="clientes.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Funcoes\funcionarios.cs" />
+    <Compile Include="funcionarios.cs" />
+    <Compile Include="pagamentos.cs" />
+    <Compile Include="pagamentosServicos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pagamentosServicos.Designer.cs">
+      <DependentUpon>pagamentosServicos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="cadastrarCliente.resx">
+      <DependentUpon>cadastrarCliente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="cadastroFuncionarios.resx">
       <DependentUpon>cadastroFuncionarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pagamentosServicos.resx">
+      <DependentUpon>pagamentosServicos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -76,6 +96,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\Athena.Funcoes.funcionarios.datasource" />
+    <None Include="Properties\DataSources\clientes.datasource" />
+    <None Include="Properties\DataSources\pagamentos.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
